Improve audio processing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,13 @@
             <div class="setting-group">
                 <h4>音声設定</h4>
                 <div class="setting-item">
+                    <label for="voiceActorSelect">キャラクターボイス:</label>
+                    <select id="voiceActorSelect">
+                        <!-- Options will be populated by JavaScript -->
+                    </select>
+                </div>
+                
+                <div class="setting-item">
                     <label for="volumeSlider">音量:</label>
                     <input type="range" id="volumeSlider" min="0" max="100" value="70">
                     <span id="volumeValue">70%</span>
