add backend system

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,16 @@
                         <option value="zenshinwomiseru.vrma">全身を見せる</option>
                     </select>
                 </div>
+                
+                <div class="setting-item">
+                    <label for="backgroundSelect">背景画像:</label>
+                    <select id="backgroundSelect">
+                        <option value="none">なし（透明）</option>
+                        <option value="sky.jpg">空間</option>
+                        <option value="room.jpg">部屋</option>
+                        <option value="garden.jpg">庭園</option>
+                    </select>
+                </div>
             </div>
             
             <div class="setting-group">
