feat: Update AI conversation manager and character settings for enhanced interaction

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,8 +48,8 @@
                     <select id="backgroundSelect">
                         <option value="none">なし（透明）</option>
                         <option value="sky.jpg">空間</option>
-                        <option value="room.jpg">部屋</option>
-                        <option value="garden.jpg">庭園</option>
+                        <option value="room.jpg">研究室</option>
+                        <option value="garden.jpg">夜空</option>
                     </select>
                 </div>
             </div>
@@ -79,12 +79,14 @@
             <div class="setting-group">
                 <h4>AI設定</h4>
                 <div class="setting-item">
-                    <label for="personalitySelect">性格:</label>
+                    <label for="personalitySelect">キャラクター:</label>
                     <select id="personalitySelect">
-                        <option value="friendly">親しみやすい</option>
-                        <option value="shy">内気</option>
-                        <option value="energetic">元気</option>
-                        <option value="calm">落ち着いた</option>
+                        <option value="rei_engineer">レイ (AIエンジニア)</option>
+                        <option value="yui_natural">ユイ (天然な癒し系)</option>
+                        <option value="friendly">汎用 - 親しみやすい</option>
+                        <option value="shy">汎用 - 内気</option>
+                        <option value="energetic">汎用 - 元気</option>
+                        <option value="calm">汎用 - 落ち着いた</option>
                     </select>
                 </div>
                 
