Add glTF to VRMA converter and bone mapping
- Introduced a new tool for converting Mixamo glTF files to VRMA format, ensuring required extensions are added.
- Added a bone mapping JSON file to map Mixamo bone names to VRM humanoid bone names.
- Removed outdated VRMA file.
- Updated requirements to reflect changes in dependencies.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
                 <div class="setting-item">
                     <label for="characterSelect">モデル選択:</label>
                     <select id="characterSelect">
-                        <option value="avatar.vrm">レイ (デフォルト)</option>
+                        <option value="avatar.vrm">レイ</option>
                         <option value="yui.vrm">ユイ</option>
                     </select>
                 </div>
